--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ uvicorn[standard]
 python-telegram-bot
 requests
 python-dotenv
-PyPDF2 # docling might require this
-docling # For OCR
 httpx # For async HTTP requests
+unstructured[pdf,docx,pptx] # Powerful library for document parsing
